# UnityRenderer

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/androidTest/java/com/sta/unityrenderer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ARCHITECTURE.md  CMakeLists.txt
app/src/main/cpp/Il2cpp/: Il2Cpp.cpp  Il2Cpp.h  Il2CppType.h  Obfuscate.h
app/src/main/cpp/core/: Il2CppResolver.cpp  Il2CppResolver.hpp  Il2CppRuntime.cpp  Il2CppRuntime.hpp  Types.hpp  UnityEngine.cpp  UnityEngine.hpp
app/src/main/cpp/entry/: Entry.cpp
app/src/main/cpp/input/: TouchInput.cpp  TouchInput.hpp
app/src/main/cpp/ui/: Canvas.cpp  Canvas.hpp  Menu.cpp  Menu.hpp  Widget.cpp  Widget.hpp
app/src/main/cpp/ui/widgets/: Category.cpp  Category.hpp  Checkbox.cpp  Checkbox.hpp  SeekBar.cpp  SeekBar.hpp  Toggle.cpp  Toggle.hpp
app/src/main/cpp/util/: Log.hpp
app/src/main/java/com/sta/unityrenderer/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/sta/unityrenderer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
